<resources>
    <string name="app_name">MaReu</string>
    <string name="action_settings">Settings</string>
    <string name="filtrer_par_date">Filtrer par heure</string>
    <string name="filtrer_par_lieu">Filtrer par lieu</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mareu">Ma Réu</string>
    <string name="sujet_de_la_r_u">Sujet de la Réu</string>
    <string name="e_mail_des_participants">E-Mail des participants</string>
    <string name="valider">Valider</string>
    <string name="lieu_de_la_r_u">Lieu de la Réu</string>
    <string name="date_de_la_r_u">Date et heure de la réu</string>
</resources>
